--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ body {
   text-align: center;
   background-image: url("https://cdn.discordapp.com/attachments/814607483066646571/873414804415578112/back.png");
   background: #ccccc;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 .container {
   width:35%;
