--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ body {
   min-width: 250px;
 }
 
+.bgr {
+  background-image: url('https://cdn.discordapp.com/attachments/879046991101960232/879047363577147493/back.png') !important;
+}
+
 .main {
   font-family: monospace;
   background-color: #ffffff00;
